# minimal

./: .gitignore  Dockerfile  README.md  contracts-spec.md  main.cpp  minimal_web.h  package.json  performance.md  plan.md  planet-physics.md  pnpm-lock.yaml  server-physics.md  test-solution.ts  turbo.json
server/: BinaryServer.h  CMakeLists.txt  binary_web.h  main.cpp
server/controllers/: PhysicsController.h  TestController.h  UserController.h
server/core/: EndpointContract.h  HttpProtocol.h  SharedState.h  WebSocketProtocol.h
server/nodes/: CrateNode.h  PlayerNode.h
server/physics/: Components.h  PhysicsSystem.h
server/scene/: BoxNode.h  GroundNode.h  RampNode.h  SceneManager.h  SceneNode.h  default.json
server/tests/: performance.cpp  socket_test.cpp
server/utils/: SHA1.h
